--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -11,8 +11,8 @@
   <div id="topMenu" >
     <ul>
         <li class="manulink"><a href=" ">Home</a></li>
-        <li class="manulink"><a href="fatCalculator">비만도 계산기</a></li>
-        <li class="manulink"><a href="training" >홈 트레이닝</a></li>
+        <li class="manulink"><a href="Dappajyeo/fatCalculator">비만도 계산기</a></li>
+        <li class="manulink"><a href="Dappajyeo/training" >홈 트레이닝</a></li>
         <li class="manulink"><a href="#">게시판</a></li>
         <li class="manulink"><a href="#">my page</a></li>
     </ul>
